# api/swagger/swagger.yaml
@@ -21,7 +21,7 @@ securityDefinitions:
   AuthToken:
     type: apiKey
     in: header
-    name: x-auth-token
+    name: x-cityatom-auth-token
 
 security:
   - BackofficeAuthToken: []
@@ -30,31 +30,6 @@ security:
 paths:
   
   /me/users:
-    x-swagger-router-controller: me
-    post:
-      description: Create user
-      security:
-        - AuthToken: []
-      operationId: mePostUser
-      parameters:
-        - name: body
-          in: body
-          schema:
-            $ref: "#/definitions/userRequestBody"
-      responses:
-        '200':
-          description: OK
-          schema:
-            $ref: "#/definitions/userResponse"
-        '400':
-          description: Validation errors
-          schema:
-            $ref: '#/definitions/validationError'
-        '403':
-          description: Authentication error
-          schema:
-            $ref: "#/definitions/error"
-  /me/users/{userId}:
     x-swagger-router-controller: me
     get:
       description: Get user
@@ -66,13 +41,10 @@ paths:
           in: body
           schema:
             $ref: "#/definitions/userRequestBody"
-        - name: userId
-          in: path
-          description: 'ID of the user'
-          required: true
-          x-example: 'USERID'
+        - in: header
+          name: x-auth-token
           type: string
-          pattern: '^[0-9a-fA-F]{24}$'
+          required: true
       responses:
         '200':
           description: OK
@@ -92,13 +64,14 @@ paths:
         - AuthToken: []
       operationId: mePut
       parameters:
-        - name: userId
-          in: path
-          description: 'ID of the user'
-          required: true
-          x-example: 'USERID'
+        - in: header
+          name: x-auth-token
           type: string
-          pattern: '^[0-9a-fA-F]{24}$'
+          required: true
+        - name: body
+          in: body
+          schema:
+            $ref: "#/definitions/userRequestBody"
       responses:
         '200':
           description: OK
@@ -112,7 +85,55 @@ paths:
           description: Authentication error
           schema:
             $ref: "#/definitions/error"
-  
+    post:
+      description: Create user
+      security:
+        - AuthToken: []
+      operationId: mePostUser
+      parameters:
+        - name: body
+          in: body
+          schema:
+            $ref: "#/definitions/userLogin"
+      responses:
+        '200':
+          description: OK
+          schema:
+            $ref: "#/definitions/userResponse"
+        '400':
+          description: Validation errors
+          schema:
+            $ref: '#/definitions/validationError'
+        '403':
+          description: Authentication error
+          schema:
+            $ref: "#/definitions/error"
+  /me/login:
+    x-swagger-router-controller: me
+    post:
+      description: Login
+      security:
+        - AuthToken: []
+      operationId: meLogin
+      parameters:
+        - name: body
+          in: body
+          schema:
+            $ref: "#/definitions/userRequestBody"
+      responses:
+        '200':
+          description: OK
+          schema:
+            $ref: "#/definitions/userResponse"
+        '400':
+          description: Validation errors
+          schema:
+            $ref: '#/definitions/validationError'
+        '403':
+          description: Authentication error
+          schema:
+            $ref: "#/definitions/error"
+
   /me/users/{userId}/datapoints:
     x-swagger-router-controller: me
     post:
@@ -346,6 +367,15 @@ definitions:
       country_code:
         $ref: "#/definitions/countryCode"
 
+  userLogin:
+    type: object
+    properties:
+      email:
+        type: string
+        example: 'email@userBackofficeInputBase.com'
+      password:
+        type: string
+        example: 'strongPassord'     
 
   userRequestBody:
     type: object
@@ -423,16 +453,6 @@ definitions:
       - latitude
       - longitude
       - symptom_scores
-  datapointResponse:
-    type: object
-    allOf:
-      - $ref: "#/definitions/datapoint"
-      - properties:
-          id:
-            type: string
-            example: '5e130f33a45ff219588e8963'
-          created_at:
-            $ref: "#/definitions/date" 
 
   countryCode:
     type: string
